2009-07-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add shell goodies to the `slenv' script.

	* deploy/slenv: Also set `PS1' with bash and zsh to inform which
	version is currently selected.

2009-07-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* tools/bin/Makefile.am (bin_SCRIPTS): Ensure `slt-many' gets
	installed.

2009-07-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use more bashims to reduce the number of sub-processes spawned by
	tools.

	* tools/bin/slc.in,
	* tools/bin/cce.in,
	* tools/bin/slr.in,
	* tools/bin/slt.in: Use more $((...)) instead of $(expr ...). Use
	more ${foo#...} and ${foo%...} instead of cut and sed. Use "<<<"
	insted of "echo|".
	
2009-07-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix emission of `.base'.
	
	* tools/bin/spp: Wait until the register window is compressed and
	GP is renamed to emit `.base'.

2009-07-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Code generation improvements for MT-Alpha.

	* tools/bin/spp: Emit directive `.base' in prologue to signal that
	a non-standard GP register is being used. Reset `.base' to
	standard after `.end'. Do not force number of locals to 2 any more
	since the simulator bug this was supposed to work around has been
	fixed long ago.

2009-07-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Sanitize test suite. Make `slt' output more human-friendly.

	The tool `slt' would create output directories for log files and
	temporary files as direct sub-directories of the current directory
	always, with directories numbered after the test output
	columns (e.g. `___tests_0'). This would make the test output
	difficult to find when the input test (.sl) was located in a
	relative path. This was changed so that test output directories
	carry the name of the SL implementation being tested, and are
	structured in a hierarchy similar to the input test, possibly the
	same if building from the source tree directly (e.g. `tests/_seqc').
